crates/ir/tests/ir/snapshots/main__ir__lower__exhaustiveness__match_or_exhaustive_bool.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module exhaustiveness__match_or_exhaustive_bool

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn test(v0: Bool, v1: Bool) -> Int =
  let v2: (Bool, Bool) = tuple(v0, v1)
  let v3: Bool = tuple_project v2.0
  let v4: Bool = tuple_project v2.1
  let v9: Bool = eq_int(v3, true)
  if v9 {
    1
  } else {
    let v8: Bool = eq_int(v3, false)
    if v8 {
      let v7: Bool = eq_int(v4, true)
      if v7 {
        1
      } else {
        let v6: Bool = eq_int(v4, false)
        if v6 {
          2
        } else {
          ()
        }
      }
    } else {
      let v5: Bool = eq_int(v4, true)
      if v5 {
        1
      } else {
        ()
      }
    }
  }
