crates/ir/tests/ir/snapshots/main__ir__lower__exhaustiveness__match_tuple_complete.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module exhaustiveness__match_tuple_complete

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn test(v0: Option[Int], v1: Option[Int]) -> Int =
  let v2: (Option[Int], Option[Int]) = tuple(v0, v1)
  let v3: Option[Int] = tuple_project v2.0
  let v4: Option[Int] = tuple_project v2.1
  switch v3 {
    0 (v5: Int) ->
      switch v4 {
        0 (v6: Int) ->
          let v7: Int = add_int(v5, v6)
          v7
        1 ->
          v5
      }
    1 ->
      switch v4 {
        0 (v8: Int) ->
          v8
        1 ->
          0
      }
  }
